--- a/style.css
+++ b/style.css
@@ -9,12 +9,14 @@
 }
 
 .navbar{
+    overflow: hidden;
     position: fixed;
+    top: 0;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(19, 21, 58);
+    background-color: rgb(19, 57, 66);
     color: #fff;
     z-index: 1;
 }
